[package]
name = "surrealize"
version = "0.1.0"
edition = "2021"

exclude = ["/.vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
futures-util = "0.3.29"
serde = "1.0.192"
surrealdb = "1.0.0"

[dev-dependencies]
tokio = "1.34.0"
