[package]
name = "surrealize_core"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more.workspace = true
futures-util.workspace = true
serde.workspace = true
surrealdb.workspace = true

[dev-dependencies]
tokio.workspace = true
