[package]
name = "getting_started"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
serde.workspace = true
surrealize = { path = "../../" }
